fix notice height, remove overflow hidden from body, added border radius to img-container

--- a/src/src-scss/scss/blocks/card.scss
+++ b/src/src-scss/scss/blocks/card.scss
@@ -142,12 +142,9 @@
     flex-wrap: wrap;
     flex-grow: 1;
 
-    overflow: hidden;
-
     border-left: 4px solid $wave;
     border-right: 4px solid $wave;
     border-bottom: 4px solid $wave;
-
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
@@ -220,7 +217,7 @@
     width: 100%;
     height: 100%;
 
-    padding: 17px 51px;
+    padding: 20px 51px;
 
     color: $rose;
 
@@ -248,6 +245,10 @@
     display: block;
     height: 270px;
     width: 100%;
+    overflow: hidden;
+
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
   }
 
   &__img {
@@ -262,8 +263,6 @@
     z-index: 1;
     right: 13px;
     bottom: 13px;
-
-    transition: background-color $quick-transition-time;
   }
 
   &__comment {
